align varialbe and self keyword color

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "publisher": "imno",
   "displayName": "Gruvbox Material imno",
   "description": "",
-  "version": "0.0.5",
+  "version": "0.0.6",
+  "repository": {"url": "https://github.com/Imn0/gruvbox-material-vscode"},
   "engines": {
     "vscode": "^1.90.0"
   },
